<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ir.nimcode.dolphin.activity.SettingsActivity$FilterFormsPreferenceFragment"
        android:icon="@drawable/ic_filter_black_24dp"
        android:title="@string/filter" />

    <header
        android:fragment="ir.nimcode.dolphin.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/header_general" />

    <header
        android:fragment="ir.nimcode.dolphin.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/header_notifications" />

    <header
        android:fragment="ir.nimcode.dolphin.activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/header_data_sync" />

</preference-headers>
