<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="receive_notifications"
        android:title="@string/receive_notifications" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/notifications_ringtone"
        android:entryValues="@array/notifications_ringtone_values"
        android:key="notifications_ringtone_settings"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/notifications_ringtone_settings" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="receive_notifications"
        android:key="notifications_vibrate"
        android:title="@string/notifications_vibrate" />

</PreferenceScreen>
