<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lines="2"
        android:text="@string/forget_password_description"
        android:textColor="@color/md_light_primary_text" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mobile_number"
        style="@style/MaterialEditTextLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/mobile_number_hint"
        android:inputType="phone" />

    <Button
        android:id="@+id/send_password"
        style="@style/MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_new_password" />

</LinearLayout>
