<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/md_light_cards"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/form_name_label"
                    android:textColor="@color/md_black_1000" />

                <TextView
                    android:id="@+id/form_name"
                    fontPath="@string/fontBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textColor="@color/md_black_1000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/owner_code_label"
                    android:textColor="@color/md_black_1000" />

                <TextView
                    android:id="@+id/owner_code"
                    fontPath="@string/fontBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textColor="@color/md_black_1000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/last_seen_date_label"
                    android:textColor="@color/md_black_1000" />

                <TextView
                    android:id="@+id/last_seen_date"
                    fontPath="@string/fontBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textColor="@color/md_black_1000" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.marcouberti.autofitbutton.AutoFitButton
                    android:id="@+id/show_on_map"
                    style="@style/MaterialButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight=".5"
                    android:drawableLeft="@drawable/ic_map"
                    android:drawableStart="@drawable/ic_map"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/show_on_map" />

                <com.marcouberti.autofitbutton.AutoFitButton
                    android:id="@+id/details"
                    style="@style/MaterialButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight=".5"
                    android:drawableLeft="@drawable/ic_info"
                    android:drawableStart="@drawable/ic_info"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/details" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>